fixup comment word wrapping

--- a/markeR/www/custom.css
+++ b/markeR/www/custom.css
@@ -105,6 +105,7 @@ section.content {
   color: #ffffff;
   padding: 2px;
   margin: 2px;
+  white-space: normal;
 }
 
 .btn-light.active {
